fix: fix escape <

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h3 class="subtitle">Code example</h3>
       <code class="code">
         function fibonacci(number) { let first = 1; let second = 1; for (let i =
-        3; i <= number; i++) { let next = first + second; first = second; second
+        3; i &lt;= number; i++) { let next = first + second; first = second; second
         = next; } return second; }
       </code>
       <h3 class="subtitle">Work experience:</h3>
