--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anvar Abduragimov CV</title>
@@ -30,8 +30,8 @@
       <h3 class="subtitle">Code example</h3>
       <code class="code">
         function fibonacci(number) { let first = 1; let second = 1; for (let i =
-        3; i &lt;= number; i++) { let next = first + second; first = second; second
-        = next; } return second; }
+        3; i &lt;= number; i++) { let next = first + second; first = second;
+        second = next; } return second; }
       </code>
       <h3 class="subtitle">Work experience:</h3>
       <p>
@@ -57,8 +57,8 @@
       </p>
       <h3 class="subtitle">My project:</h3>
       <p>
-        Che gotovim <a href="https://github.com/crecker05ru/che-gotovit"></a>Che
-        gotovit
+        Che gotovim
+        <a href="https://github.com/crecker05ru/che-gotovit">Che gotovit</a>
       </p>
       <h3 class="subtitle">English: <span class="value">A2</span></h3>
     </div>
