--- a/index.html
+++ b/index.html
@@ -5,16 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Anvar Abduragimov CV</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style.css" >
     <link rel="icon" href="assets/favicon.ico" >
   </head>
   <body>
     <header class="header">
       <nav class="nav">
         <ul class="nav-list">
-          <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-          <li class="nav-item"><a href="#about-me" class="nav-link">About me</a></li>
-          <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+          <li class="nav-item">
+            <a href="#contacts" class="nav-link">Contacts</a>
+          </li>
+          <li class="nav-item">
+            <a href="#about-me" class="nav-link">About me</a>
+          </li>
+          <li class="nav-item">
+            <a href="#skills" class="nav-link">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a href="#code" class="nav-link">Code example</a>
+          </li>
+          <li class="nav-item">
+            <a href="#work-experience" class="nav-link">Work experience</a>
+          </li>
+          <li class="nav-item">
+            <a href="#education" class="nav-link">Education</a>
+          </li>
+          <li class="nav-item">
+            <a href="#courses" class="nav-link">Courses</a>
+          </li>
+          <li class="nav-item">
+            <a href="#my-project" class="nav-link">My project</a>
+          </li>
+          <li class="nav-item">
+            <a href="#languages" class="nav-link">Languages</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -22,45 +46,51 @@
       <main class="main main-container">
         <section class="section">
           <h1 class="name">Anvar Abduragimov</h1>
-          <img src="./assets/img/avatar.jpg" alt="my avatar" width="320" height="200" class="avatar"/>
+          <img
+            src="./assets/img/avatar.jpg"
+            alt="my avatar"
+            width="320"
+            height="200"
+            class="avatar"
+          >
         </section>
         <section class="section" id="contacts">
           <h2 class="subtitle">Contacts:</h2>
-          <ol class="contacts">
-            <li><span>Email:</span> fort2652@gmail.com</li>
-            <li>Telegram: @ankaboot</li>
-            <li>Skype: crecker05ru</li>
-            <li>Discord: crecker05ru#4197</li>
-            <li>Github: crecker05ru</li>
-            <li>Phone: +79884586930,+79387803265</li>
-          </ol>
+          <ul class="contacts">
+            <li><span class="key">Email:</span> fort2652@gmail.com</li>
+            <li><span class="key">Telegram:</span> @ankaboot</li>
+            <li><span class="key">Skype:</span> crecker05ru</li>
+            <li><span class="key">Discord:</span> crecker05ru#4197</li>
+            <li><span class="key">Github:</span> crecker05ru</li>
+            <li><span class="key">Phone:</span> +79884586930,+79387803265</li>
+          </ul>
         </section>
         <section class="section" id="about-me">
-          <h2 class="subtitle" >About me:</h2>
+          <h2 class="subtitle">About me:</h2>
           <p>
             My objective is to create convenient, accessible and interactive
-            UI,create usefull web applications,grow as a professional in frontend
-            development.
+            UI,create usefull web applications,grow as a professional in
+            frontend development.
           </p>
         </section>
         <section class="section" id="skills">
-          <h2 class="subtitle" >Skills:</h2>
+          <h2 class="subtitle">Skills:</h2>
           <p>HTML,CSS,JS,SCSS,React JS,Next.js,Vue 3,Git.</p>
         </section>
         <section class="section" id="code">
           <h2 class="subtitle">Code example</h2>
           <code class="code">
-            function fibonacci(number) { let first = 1; let second = 1; for (let i
-            = 3; i &lt;= number; i++) { let next = first + second; first = second;
-            second = next; } return second; }
+            function fibonacci(number) { let first = 1; let second = 1; for (let
+            i = 3; i &lt;= number; i++) { let next = first + second; first =
+            second; second = next; } return second; }
           </code>
         </section>
         <section class="section" id="work-experience">
           <h2 class="subtitle">Work experience:</h2>
           <p>
             Kalimat.io, 1st April 2022 – present.Position – frontend
-            developer.Responsibilities - task management in ClickUp,layout drawing
-            with Figma and SCSS preprocessor,writing code on Next.js
+            developer.Responsibilities - task management in ClickUp,layout
+            drawing with Figma and SCSS preprocessor,writing code on Next.js
             framework,rendering data from the server in UI,object typing with
             TypeScript,updating remote branch in GitLab repository with Git and
             Bash
@@ -69,8 +99,8 @@
         <section class="section" id="education">
           <h2 class="subtitle">Education:</h2>
           <p>
-            2009 — 2014 Dagestan State Institute of National Economy,department of
-            Information Technology,specialist degree.
+            2009 — 2014 Dagestan State Institute of National Economy,department
+            of Information Technology,specialist degree.
           </p>
         </section>
         <section class="section" id="courses">
@@ -86,10 +116,7 @@
         </section>
         <section class="section" id="my-project">
           <h2 class="subtitle">My project:</h2>
-          <p>
-            Che gotovim
-            <a href="https://github.com/crecker05ru/che-gotovit">Che gotovit</a>
-          </p>
+          <a href="https://github.com/crecker05ru/che-gotovit" class="nav-link pl-0 pr-0">Che gotovit</a>
         </section>
         <section class="section" id="languages">
           <h2 class="subtitle">English: <span class="value">A2</span></h2>
@@ -98,12 +125,17 @@
     </div>
     <footer class="footer">
       <section class="footer-section">
-
         <nav>
-          <a class="nav-link" href="https://crecker05ru.github.io/rsschool-cv/">GitHub</a>
+          <a class="nav-link" href="https://crecker05ru.github.io/rsschool-cv/"
+            >GitHub</a
+          >
         </nav>
         <a class="svg-link" href="https://rs.school/js/">
-          <img src="./assets/svg/rs_school_js.svg" alt="RS School logo" width="200" />
+          <img
+            src="./assets/svg/rs_school_js.svg"
+            alt="RS School logo"
+            width="200"
+          >
         </a>
         <h2 class="footer-year">2022</h2>
       </section>
